<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".calculateCable">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="154dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/quadratura_cable"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/cableQuadratura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="154dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:text="@string/type_cable"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/cableTypeInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/cableTypeInput"
        android:layout_width="223dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/type_cable_hint"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cableLengthInput" />

    <EditText
        android:id="@+id/cableQuadratura"
        android:layout_width="223dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/quadratura_cable_hint"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cableTypeInput" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="170dp"
        android:text="Fucking Calculator"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="154dp"
        android:layout_height="38dp"
        android:layout_marginTop="164dp"
        android:text="@string/length_cable"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/cableLengthInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/cableLengthInput"
        android:layout_width="223dp"
        android:layout_height="38dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/length_cable_hint"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/caclulateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/calculate_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>