<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:weightSum="10"
    tools:context=".AddCableActivity">

    <ImageView
        android:id="@+id/addLineButton"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addQuadraturaButton"
        app:srcCompat="@drawable/addcable" />

    <ImageView
        android:id="@+id/addQuadraturaButton"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTypeButton"
        app:srcCompat="@drawable/addcable" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="170dp"
        android:text="Add fucking cable"
        android:textSize="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lengthInput"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/length_cable_hint"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="19dp"
        app:layout_constraintEnd_toStartOf="@+id/addTypeButton"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/lengthInput" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/quadratura_cable"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/line_cable"
        android:textSize="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Spinner
        android:id="@+id/spinnerLine"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="19dp"
        app:layout_constraintEnd_toStartOf="@+id/addLineButton"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/spinnerQuadratura" />

    <Spinner
        android:id="@+id/spinnerQuadratura"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="19dp"
        app:layout_constraintEnd_toStartOf="@+id/addQuadraturaButton"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/spinnerType" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/type_cable"
        android:textSize="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="104dp"
        android:text="@string/length_cable"
        android:textSize="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="158dp"
        android:layout_height="79dp"
        android:text="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/addTypeButton"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/addcable" />

</androidx.constraintlayout.widget.ConstraintLayout>